--- a/src/assets/styles/Start.scss
+++ b/src/assets/styles/Start.scss
@@ -1,11 +1,56 @@
+.startMenu{
+    background-image: url('../images/heroBg.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+    color: white;
+    position: relative;
+}
+
 .player1{
-    background-color: lightgreen;
+    background-color: rgba(0,0,0,0.7);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border-radius: 4px;
-    padding: 20px 50px 100px 50px;
+    padding: 30px;
+    box-shadow: 10px 10px 10px 10px black;
+    border-radius: 20px;
 }
 
 .player2{
-    background-color: lightcoral;
+    background-color: rgba(0,0,0,0.7);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border-radius: 4px;
-    padding: 20px 50px 100px 50px;
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px 10px black;
+}
+
+.imgAvatar{
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
+    padding-top: 20px;
+}
+
+.btn-start{
+    color: rgb(136, 119, 172);
+    text-decoration: none;
+    font-size: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: 15%;
+    box-shadow: 6px 6px 8px 8px rgb(33, 3, 54);
+    border-radius: 20px;
+    position: absolute;
+    bottom: 1%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 10px;
+    background-color: rgb(51, 4, 77);
 }
