--- a/src/assets/styles/Start.scss
+++ b/src/assets/styles/Start.scss
@@ -13,9 +13,11 @@
     flex-direction: column;
     align-items: center;
     border-radius: 4px;
-    padding: 30px;
-    box-shadow: 10px 10px 10px 10px black;
+    width: 300px;
+    margin: auto;
+    box-shadow: 6px 6px 6px 6px black;
     border-radius: 20px;
+    
 }
 
 .player2{
@@ -24,27 +26,28 @@
     flex-direction: column;
     align-items: center;
     border-radius: 4px;
-    padding: 30px;
+    width: 300px;
+    margin: auto;
     border-radius: 20px;
-    box-shadow: 10px 10px 10px 10px black;
+    box-shadow: 6px 6px 6px 6px black;
 }
 
 .imgAvatar{
-    width: 200px;
+    width:200px;
     height: 200px;
     border-radius: 20px;
     padding-top: 20px;
 }
 
 .btn-start{
-    color: rgb(136, 119, 172);
+    color: rgb(172, 148, 224);
     text-decoration: none;
     font-size: 3em;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 30%;
-    height: 15%;
+    width: 200px;
+    height: 7%;
     box-shadow: 6px 6px 8px 8px rgb(33, 3, 54);
     border-radius: 20px;
     position: absolute;
@@ -52,5 +55,15 @@
     left: 50%;
     transform: translate(-50%,-50%);
     padding: 10px;
-    background-color: rgb(51, 4, 77);
+    background-color: rgb(77, 19, 107);
+    animation: alarmStart 0.8s linear infinite; 
 }
+
+@keyframes alarmStart{
+    0% {
+      background-color: rgb(183, 64, 145);
+    }
+    100% {
+     
+    }
+  }
