--- a/src/assets/styles/Game.scss
+++ b/src/assets/styles/Game.scss
@@ -37,6 +37,7 @@
   //******** timer ***********
   .timer{
     display: flex;
+    justify-content: center;
     align-items: center;
     color: red;
   }
